--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -12,10 +12,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_logout"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="264dp"/>
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"/>
 
     <ListView
+        android:id="@+id/FriendListView"
         android:layout_width="347dp"
         android:layout_height="441dp"
         android:layout_marginBottom="8dp"
